--- a/meta/main.yml
+++ b/meta/main.yml
@@ -14,6 +14,9 @@ galaxy_info:
   - mail 
   - notification
   - system
-
-dependencies: []
+  - foo
+  - bar
+  - baz
+dependencies:
+  - { role: chouseknecht.grunt } 
   
