--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,28 +9,6 @@ galaxy_info:
   - name: EL
     versions:
     - all
-  galaxy_tags:
-  - email 
-  - notification
-  - system
-  - foo
-  - bob:hope:smile
-  - sam
-  - fredy
-  - will
-  - cabowabo
-  - dave
-  - amy
-  - pretty
-  - dead
-  - simple
-  - laska
-  - matt
-  - jones
-  - magazine
-  - soap
-  - detergent
-  - wacwacawaca
-
-dependencies:
-  - { role: chouseknecht.grub } 
+  categories:
+    - system
+dependencies:[]
