--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install ansible
 
   # Create ansible.cfg with correct roles_path
-  - printf '[defaults]\nroles_path=../' >ansible.cfg
+  - echo "[defaults]\nroles_path=../" >ansible.cfg
 
 script:
   # Basic role syntax check
