--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,16 @@
 language: python
 python: "2.7"
 
-before_install:
-  # Update all packages
-  - sudo apt-get update -qq
+# Use the new container infrastructure
+sudo: false
+
+# Install ansible
+addons:
+  apt:
+    packages:
+    - ansible
 
 install:
-  # Install Ansible
-  - pip install ansible
-
   # Create ansible.cfg with correct roles_path
   - printf '[defaults]\nroles_path=../' >ansible.cfg
 
