Travis - attempt latest ansible release

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ sudo: false
 # Install ansible
 addons:
   apt:
+    sources:
+    - ppa:ansible/ansible
+addons:
+  apt:
     packages:
     - ansible
 
