Testing role import

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,17 +3,17 @@ galaxy_info:
   author: chouseknecht 
   description: Quick and easy email sending from Tower, Jenkins or any job stream. 
   company: Ansible 
-  license: MIT
-  min_ansible_version: 1.9
+  #license: MIT
+  #min_ansible_version: 1.9
   platforms:
   - name: EL
     versions:
     - all
-  galaxy_tags:
-  - sendmail
-  - email
-  - notify
-  - alert
-  - monitor
+  #galaxy_tags:
+  #- sendmail
+  #- email
+  #- notify
+  #- alert
+  #- monitor
 
 dependencies: []
