Testing import - fixed all the issues

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,19 +1,19 @@
 ---
 galaxy_info:
-  author: chouseknecht 
-  description: Quick and easy email sending from Tower, Jenkins or any job stream. 
-  company: Ansible 
-  #license: MIT
-  #min_ansible_version: 1.9
-  platforms: foo
-  #- name: EL
-  #  versions:
-  # - all
-  #galaxy_tags:
-  #- sendmail
-  #- email
-  #- notify
-  #- alert
-  #- monitor
+  author: chouseknecht
+  description:
+  company: Ansible
+  license: MIT
+  min_ansible_version: 1.9
+  platforms:
+    - name: EL
+      versions:
+      - all
+  galaxy_tags:
+  - sendmail
+  - email
+  - notify
+  - alert
+  - monitor
 
-dependencies:
+dependencies: []
