--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,7 @@ install:
 script:
   # Basic role syntax check
   - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
+
+notifications:
+  webhooks:
+    - https://galaxy-qa.ansible.com/api/v1/notifications
