--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,4 @@ script:
   - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
 
 notifications:
-  webhooks:
-    - https://galaxy-qa.ansible.com/api/v1/notifications
+  webhooks: https://galaxy-qa.ansible.com/api/v1/notifications
